# Spingalett

./: CMakeLists.txt  LICENSE  README.md
Examples/: Benchmark.c  XOR.c
Include/Spingalett/: Spingalett.Config.h.in  Spingalett.h
Src/: Spingalett.Activation.c  Spingalett.Error.c  Spingalett.Memory.c  Spingalett.Names.c  Spingalett.Network.c  Spingalett.Private.h  Spingalett.Random.c  Spingalett.SIMD.c  Spingalett.Serialize.c  Spingalett.Settings.c  Spingalett.Training.c
